# ai-engineering-team

./: README.md  pyproject.toml
output_gpt_4o/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
output_gpt_4o_mini/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
src/ai_engineering_team/: crew.py  main.py
src/ai_engineering_team/config/: agents.yaml  tasks.yaml
