[project]
name = "ai_engineering_team"
version = "0.1.0"
description = "ai_engineering_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.0",
    "gradio>=6.5.1",
    "litellm>=1.81.13",
]

[project.scripts]
ai_engineering_team = "ai_engineering_team.main:run"
run_crew = "ai_engineering_team.main:run"
train = "ai_engineering_team.main:train"
replay = "ai_engineering_team.main:replay"
test = "ai_engineering_team.main:test"
run_with_trigger = "ai_engineering_team.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
